Work in progress rework solver module